[package]
name = "concurrent-mcts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-ord = "0.3.2"
rand = "0.8.5"
rand_xorshift = "0.3.0"
dashmap = "5.4.0"
serde = { version = "1.0.144", features = ["derive"] }
